objects/Versement_OCTA__c.object
<CustomObject>
    <fields>
        <fullName>Banque__c</fullName>
        <label>Banque</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BRED - Banque Populaire</fullName>
                </value>
                <value>
                    <fullName>BNP PARIBAS</fullName>
                </value>
                <value>
                    <fullName>BANQUE POPULAIRE</fullName>
                </value>
                <value>
                    <fullName>BTP BANQUE</fullName>
                </value>
                <value>
                    <fullName>CREDIT AGRICOLE</fullName>
                </value>
                <value>
                    <fullName>CREDIT COOPERATIF</fullName>
                </value>
                <value>
                    <fullName>CAISSE D&apos;EPARGNE</fullName>
                </value>
                <value>
                    <fullName>CIC</fullName>
                </value>
                <value>
                    <fullName>CREDIT MUTUEL</fullName>
                </value>
                <value>
                    <fullName>CREDIT DU NORD</fullName>
                </value>
                <value>
                    <fullName>HERVET</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>LCL - CREDIT LYONNAIS</fullName>
                </value>
                <value>
                    <fullName>LYONNAISE DE BANQUE</fullName>
                </value>
                <value>
                    <fullName>Banque MARTIN MAUREL</fullName>
                </value>
                <value>
                    <fullName>LA BANQUE POSTALE</fullName>
                </value>
                <value>
                    <fullName>BANQUE SCALBERT DUPONT</fullName>
                </value>
                <value>
                    <fullName>SOCIETE GENERALE</fullName>
                </value>
                <value>
                    <fullName>AUTRE</fullName>
                </value>
                <value>
                    <fullName>BANQUE DE LA REUNION</fullName>
                </value>
                <value>
                    <fullName>BANQUE TARNEAUD</fullName>
                </value>
                <value>
                    <fullName>NEUFLIZE OBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collecte__c</fullName>
        <label>Collecte</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMLYON</fullName>
                    <default>true</default>
                    <label>EMLYON</label>
                </value>
                <value>
                    <fullName>St Etienne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compte_Versement_OCTA__c</fullName>
        <label>Compte</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Est_un_OCTA__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Versements OCTA</relationshipLabel>
        <relationshipName>Versements_OCTA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>D_tail_banque__c</fullName>
        <label>Détail banque</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_de_la_piece__c</fullName>
        <label>Date de la pièce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_versement__c</fullName>
        <label>Date de chèque/virement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exercice_Collecte__c</fullName>
        <defaultValue>TEXT(YEAR( DATEVALUE( Now()) ))</defaultValue>
        <description>Exercice de collecte</description>
        <inlineHelpText>Exercice de collecte</inlineHelpText>
        <label>Exercice Collecte</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exercice_de_collecte__c</fullName>
        <formula>TEXT(YEAR( DATEVALUE( CreatedDate ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exercice de collecte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montant_net__c</fullName>
        <label>Montant net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nature_versement__c</fullName>
        <label>Nature versement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chèque</fullName>
                </value>
                <value>
                    <fullName>Virement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_ro_du_ch_que__c</fullName>
        <label>Numéro du chèque</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_ro_versement__c</fullName>
        <label>Numéro versement (interne)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_suivi__c</fullName>
        <label>Numéro de suivi</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Octa_Montant_A__c</fullName>
        <label>Montant A</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Octa_Montant_B__c</fullName>
        <label>Montant B</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_de_versement__c</fullName>
        <label>Type de versement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barème OCTA</fullName>
                </value>
                <value>
                    <fullName>Fond CCI</fullName>
                </value>
                <value>
                    <fullName>Fond Libre Subvention</fullName>
                </value>
                <value>
                    <fullName>Fond Libre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Versement OCTA</label>
    <nameField>
        <displayFormat>VT# {00000000}</displayFormat>
        <label>Numéro versement OCTA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Versements OCTA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>